fix: change img position , fix: change header wrap

--- a/style.css
+++ b/style.css
@@ -37,13 +37,13 @@ header{
     display:flex;
     /* justify-content: center; */
     margin: 0 auto;
-  }
+}
   
-  .header{
+.header{
     display:flex;
     justify-content: center;
     width: 100%; 
-  }
+}
   
 .header p{
   font-size: 1.5rem;
@@ -163,8 +163,10 @@ pre{
   .header{
     width: 100%;
     height: auto;
-    /* display: block; */
     margin: 0 auto;
+    flex-direction: column; 
+    align-items: center; 
+
   }
 
   .main-section{
@@ -184,7 +186,10 @@ pre{
   h1{
     font-size: 3rem;
   }
+  
+  span{
 
+  }
 
   aside::after{
     display:none;
